--- a/src/main.sass
+++ b/src/main.sass
@@ -35,6 +35,7 @@ body
   padding: 0
   font-family: 'Roboto', sans-serif
   font-size: 16px
+  overflow-x: hidden
 
 
 ul
@@ -313,6 +314,22 @@ button
 .history-task
   display: flex
   flex-wrap: wrap
+
+.card-enter
+   right: -600px
+
+.card-enter.card-enter-active
+  right: 0
+  transition: right 300ms ease-in
+
+
+.card-leave
+  right: 0
+
+.card-leave.card-leave-active
+  right: -600px
+  transition: right 300ms ease-in
+
 
 
 
