--- a/src/main.sass
+++ b/src/main.sass
@@ -182,7 +182,7 @@ button
   left: -30px
   width: 64px
   height: 81px
-  background-image: url("../img/icons/Combined Shape Copy.svg")
+  background-image: url("../img/icons/Combined_Shape_Copy.svg")
   background-repeat: no-repeat
 
 
